# latest

./: AGENTS.md  Cargo.toml  HANDOFF.md  README.md  SECURITY.md  SPEC.md  dist-workspace.toml  rustfmt.toml
.beads/: issues.jsonl  last-touched
.github/: dependabot.yml
.github/workflows/: homebrew.yml  release.yml  security.yml
benches/: benchmarks.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_config_parsing.rs  fuzz_package_arg.rs  fuzz_version_parsing.rs
src/: cache.rs  config.rs  lib.rs  main.rs  project.rs
src/sources/: apt.rs  brew.rs  cargo.rs  composer.rs  conda.rs  docker.rs  gem.rs  go.rs  hex.rs  maven.rs  mod.rs  npm.rs  nuget.rs  path.rs  pip.rs  pub_dev.rs  swift.rs  uv.rs
tests/: integration_tests.rs
