[package]
name = "latest"
version = "0.1.0"
edition = "2024"
description = "Find the latest version of any command, package, or library"
license = "MIT"
repository = "https://github.com/cv/latest"
keywords = ["cli", "version", "package-manager"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
rayon = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
serde_json = "1.0.148"

[profile.release]
lto = true
strip = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.9"

[[bench]]
name = "benchmarks"
harness = false

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
