[package]
name = "latest"
version = "0.2.6"
edition = "2024"
description = "Find the latest version of any command, package, or library"
license = "MIT"
repository = "https://github.com/cv/latest"
homepage = "https://github.com/cv/latest"
keywords = ["cli", "version", "package-manager"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
rayon = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
dirs = "6"
serde_json = "1.0.148"
urlencoding = "2"
semver = "1"

[profile.release]
lto = true
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.9"

[[bench]]
name = "benchmarks"
harness = false

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
